--- a/templates/calc.html
+++ b/templates/calc.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <script src="calc.js">
-    </script>
+    <script src="{{ url_for('static', filename='calc.js') }}">
 
     <div class="buttons">
 
@@ -45,5 +44,6 @@
             <div class="calc_btn" onclick="save_digit(0)">0</div>  
         </div>  
     </div>
+    </script>
 </body>
 </html>
